# parser-with-senior

./: README.md  db.json  main.py  pyproject.toml
parsers/: hh_parser.py  sj_parser.py
service/: abstract.py  base.py  client.py  db.json
src/: jsonsaver.py  requests.py  vacancies.py
src/vacancy/: hh_vacancy.py  sj_vacancy.py
