[tool.poetry]
name = "parser-with-senior"
version = "0.1.0"
description = ""
authors = ["Daniels Ivaskevics <wavesaftwaves@gmail.com>"]
readme = "README.md"
packages = [{include = "parser_with_senior"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.29.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
